--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
         <h1 id="display">|</h1>
         <section id="buttons">
             <section id="num-buttons">
-                <button onclick="add(7)">7</button>
-                <button onclick="add(8)">8</button>
-                <button onclick="add(9)">9</button>
-                <button onclick="add(4)">4</button>
-                <button onclick="add(5)">5</button>
-                <button onclick="add(6)">6</button>
-                <button onclick="add(1)">1</button>
-                <button onclick="add(2)">2</button>
-                <button onclick="add(3)">3</button>
-                <button onclick="add(0)">0</button>
+                <button onclick="add('7')">7</button>
+                <button onclick="add('8')">8</button>
+                <button onclick="add('9')">9</button>
+                <button onclick="add('4')">4</button>
+                <button onclick="add('5')">5</button>
+                <button onclick="add('6')">6</button>
+                <button onclick="add('1')">1</button>
+                <button onclick="add('2')">2</button>
+                <button onclick="add('3')">3</button>
+                <button onclick="add('0')">0</button>
                 <button onclick="add('.')">.</button>
-                <button>=</button>
+                <button onclick="calc(display)">=</button>
             </section>
             <section id="arrow-and-op-buttons">
                 <section id="arrow-buttons">
@@ -41,7 +41,7 @@
                     <button onclick="add('+')">+</button>
                     <button onclick="add('-')">-</button>
                     <button onclick="back()">back</button>
-                    <button onclick="clear()">clear</button>
+                    <button onclick="clr()">clear</button>
                 </section>
             </section>
         </section>
