--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <button onclick="add('3')">3</button>
                 <button onclick="add('0')">0</button>
                 <button onclick="add('.')">.</button>
-                <button onclick="calc(display)">=</button>
+                <button onclick="enter()">=</button>
             </section>
             <section id="arrow-and-op-buttons">
                 <section id="arrow-buttons">
