--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             </section>
             <section id="arrow-and-op-buttons">
                 <section id="arrow-buttons">
-                    <button id="up">^</button>
+                    <button id="up" onclick="hist(1)">^</button>
                     <button onclick="move(-1)"><</button>
-                    <button>v</button>
+                    <button onclick="hist(-1)">v</button>
                     <button onclick="move(1)">></button>
                 </section>
                 <section id="op-buttons">
